--- a/index.html
+++ b/index.html
@@ -3,25 +3,48 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<link rel="stylesheet" href="css\bootstrap.css">
+	<link rel="stylesheet" href="css\bootstrap-grid.css">
+	<link rel="stylesheet" href="css\bootstrap-reboot.css">
 </head>
 <body>
-	<br><br>
-	<label>Nombre: </label>
-	<input type="text" id="nombre">
-	<br><br>
-	<label>Edad: </label>
-	<input type="number" min="1" max="120" id="edad">
-	<br><br>
-	<label>Apellido: </label>
-	<input type="text" id="apellido">
-	<br><br>
-	<button onclick="obtenerNombre()">Enviar</button>
-	
+	<div class="container">
+
+		<div class="row">
+			<div class="col-md-4">
+					<br>
+					Formulario de inscripción:
+					<hr>
+					<label>Nombre: </label>
+					<input type="text" class="form-control" id="nombre" required>
+					<br>
+					<label>Apellido: </label>
+					<input type="text" class="form-control" id="apellido" required>
+					<br>
+					<label>Edad: </label>
+					<input type="number" class="form-control" min="1" max="120" id="edad" required>
+					<br>
+					<label>Correo electrónico: </label>
+					<input type="mail" class="form-control" id="email" required>
+					<br>
+					<label>Carrera: </label>
+					<input type="text" class="form-control" required>
+					<br><br>
+					<button onclick="obtenerNombre()" class="btn btn-success form-control">Enviar</button>
+			</div>
+			<div class="col-md-4"></div>
+			<div class="col-md-4"></div>
+		</div>
+
+			
+	</div>
+
 	<script>
 		function obtenerNombre(){
-			var nombre 	= document.getElementById('nombre').value;
-			var edad 	= document.getElementById('edad').value;
-			var apellido = document.getElementById('apellido').value;
+			var nombre 		= document.getElementById('nombre').value;
+			var apellido 	= document.getElementById('apellido').value;
+			var edad 		= document.getElementById('edad').value;
+			var email 		= document.getElementById('email').value;
 			console.log(nombre + edad + apellido);
 			alert(nombre + " " + edad + " " + apellido);
 
