--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+
+	<link rel=icon href=img\favicon.jpg sizes="16x16" type="image/jpg">
 	
 	<!--Agregar librerias Bootstrap-->
 	<link rel="stylesheet" href="css\bootstrap.css">
@@ -41,7 +43,7 @@
 			
 							<div class="input-group-prepend">
 								<input type="text" class="form-control" id="email">
-								<div class="input-group-text form">@</div>
+								<div class="input-group-text form"><i class="fas fa-at"></i><!--Acá estoy trayendo el @ de Font Awesome--></div>
 								<input type="text" class="form-control" id="email2">
 							</div>
 			
