Avance 17-05-2019 16:42 Chao me voy a la casa

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 			var email2 		= document.getElementById('email2').value;
 			var email3 		= document.getElementById('email3').value;
 			var carrera 	= document.getElementById('carrera').value;
-			console.log(nombre + edad + apellido);
+			//console.log(nombre + edad + apellido);
 			
 
 			if(nombre == ''){
