Le agregue un banner

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
 						<br>
 						<div class="container">
 							<div class="card-header">
+								<img src="img\banner.jpg" class="img-thumbnail">
+								<br><br>
 								<h4 class="my-0 font-weight-normal"><i class="fas fa-address-book"></i>  Formulario de inscripción:</h4>
 							</div>
 							<br>
