Exporte el proyecto al webroot de XAMPP

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 						<br>
 						<div class="container">
 
-							<form action="index.php" method="POST">
+							<form action="index2.php" method="POST">
 
 							<div class="card-header">
 								<img src="img\banner.jpg" class="img-thumbnail">
@@ -37,7 +37,7 @@
 							<br>
 							
 							<label><i class="fas fa-address-card"></i> Nombre: </label>
-							<input type="text" class="form-control" id="nombre" autocomplete="off" required>
+							<input type="text" class="form-control" name="nombre" id="nombre" autocomplete="off" required>
 							<br>
 							<label><i class="far fa-address-card"></i> Apellido: </label>
 							<input type="text" class="form-control" id="apellido" autocomplete="off" required>
